--- a/Pages/Index.cshtml.css
+++ b/Pages/Index.cshtml.css
@@ -69,14 +69,23 @@ body {
     pointer-events: auto;
 }
 
-
 .uav-card {
-    background-color: #f0f0f0;
+    cursor: pointer;
+    border: 2px solid rgb(58, 58, 58);
+    /* space between cards */
+    transition: background-color 0.2s, border 0.2s;
+    background-color: #b4b4b4;
     border-radius: 10px;
     padding: 15px;
     margin-bottom: 15px;
     transition: transform 0.2s ease;
-    /*how long the transform takes - small magnification thingy*/
+}
+
+.uav-card.selected {
+    background-color: #4a6899;
+    /* dark blue/grey */
+    border: 2px solid #38bdf8;
+    /* cyan highlight */
 }
 
 .uav-card:hover {
@@ -103,6 +112,14 @@ body {
     background-color: #0056b3;
 }
 
+.dangerButton {
+
+    transition: background-color 0.2s ease;
+}
+
+.dangerButton:hover {
+    background-color: #0056b3;
+}
 .circle-my-div-icon {
     width: 25px;
     height: 25px;
